# TetrisGame

./: .gitmodules  CMakeLists.txt  README.md
doc/: TetrisGame.doc  image.vsdx  tetris_protocol.md
src/: CMakeLists.txt
src/database/: recordmanager.cpp  recordmanager.h
src/mongoose/: mongoose.h
src/server/: tetris_web_server.cpp  tetris_web_server.h
src/tetris/: tetris.cpp  tetris.h  tetromino.cpp  tetromino.h
test/tetris_server/: CMakeLists.txt  getopt.c  getopt.h  rank_database.db  tetris_server.cpp  vzflags.h
test/tetris_server/web_root/: example.html  index - Copy.html  index.html  key.html  tetris_game.html
test/tetris_server/web_root/img/: press_key.vsdx
test/web_server/: CMakeLists.txt  web_server.cpp
